syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "MovieList.gRPC";

package Grpc;

service Grpc {
    rpc GetMovie (MovieRequest) returns (MovieResponse);
}

message MovieRequest {
    int32 id = 1;
}

message MovieResponse {
    int32 id = 1;
    string title = 2;
    int32 year = 3;
    //google.protobuf.Timestamp release_date = 3;
}